plugins {
    id 'java'
    id 'jacoco'
    id 'org.springframework.boot' version '2.7.1'
    id 'io.spring.dependency-management' version '1.0.12.RELEASE'
}

def lombokVersion = '1.18.24'

group = 'uk.gov.digital.ho.hocs'
sourceCompatibility = JavaVersion.VERSION_17

repositories {
    mavenCentral()
}

plugins.withType(JacocoPlugin) {
    tasks["test"].finalizedBy 'jacocoTestReport'
}

test {
    finalizedBy jacocoTestReport // report is always generated after tests run
}

jacocoTestReport {
    dependsOn test // tests are required to run before generating the report
    reports {
        xml.required = true
        html.required = false
        csv.required = false
        //for XML
        xml.destination file("${buildDir}/reports/jacoco.xml")
    }
}

dependencies {
    implementation('org.springframework.boot:spring-boot-starter-web') {
        exclude(module: 'spring-boot-starter-tomcat')
    }

    implementation 'org.springframework.boot:spring-boot-starter-undertow'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-json'
    implementation 'org.springframework.boot:spring-boot-starter-cache'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'com.amazonaws:aws-java-sdk-sns:1.12.149'

    implementation 'com.vladmihalcea:hibernate-types-55:2.16.3'

    implementation 'net.logstash.logback:logstash-logback-encoder:7.2'
    implementation 'org.springdoc:springdoc-openapi-ui:1.6.9'

    implementation 'com.github.ben-manes.caffeine:caffeine:3.1.1'
    implementation 'org.json:json:20220320'

    implementation 'org.flywaydb:flyway-core:8.5.13'
    runtimeOnly 'org.postgresql:postgresql:42.4.0'

    compileOnly "org.projectlombok:lombok:${lombokVersion}"
    annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
    annotationProcessor 'org.springframework:spring-context-indexer:5.3.21'
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'

    testImplementation 'com.google.guava:guava:31.1-jre'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.assertj:assertj-core'
    testImplementation 'junit:junit:4.13.2'
}

dependencyManagement {
    imports {
        mavenBom "org.springframework.cloud:spring-cloud-dependencies:2021.0.3"
    }
}

jar {
    enabled = false
}
